# leptos-tailwind-template

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
