[package]
name = "neodsp-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
log = "0.4"
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
